--- a/p3/image_classification.ipynb
+++ b/p3/image_classification.ipynb
@@ -180,7 +180,10 @@
         "class MnistNet(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(MnistNet, self).__init__()\n",
-        "        self.convLayers = nn.Sequential(nn.Conv2d(in_channels = 1, out_channels = 8, kernel_size=3, stride=1, padding=1), nn.BatchNorm2d(8), nn.ReLU(), nn.MaxPool2d(2))\n",
+        "        self.convLayers = nn.Sequential(nn.Conv2d(in_channels = 1, out_channels = 8, kernel_size=3, stride=1, padding=1), \n",
+        "                                        nn.BatchNorm2d(8), \n",
+        "                                        nn.ReLU(), \n",
+        "                                        nn.MaxPool2d(2))\n",
         "        self.out = nn.Linear(14*14*8, 10)\n",
         "\n",
         "\n",
@@ -193,7 +196,6 @@
         "class CifarNet(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(CifarNet, self).__init__()\n",
-        "        # Add batch normalization?\n",
         "        self.convLayers = nn.Sequential(\n",
         "            nn.Conv2d(in_channels = 3, out_channels = 32, kernel_size=3, stride=1, padding=1), \n",
         "            nn.ReLU(), \n",
@@ -258,7 +260,8 @@
       },
       "outputs": [],
       "source": [
-        "# Create a validation set using the training data loader (necessary because do not want to introduce another parameter in the train() function)\n",
+        "# Create a validation set using the training data loader (necessary because do not want to introduce another parameter \n",
+        "# in the train() function)\n",
         "def validation_split_from_loader(loader_train):\n",
         "    features = []\n",
         "    labels = []\n",
@@ -295,7 +298,7 @@
         "        num_correct += (outputs == y).sum()\n",
         "    return (num_correct / num_samples) * 100\n",
         "\n",
-        "def train(loader_train, loader_test, model, optimizer, model_name, epochs=100):\n",
+        "def train(loader_train, loader_test, model, optimizer, epochs=100, model_name=\"current_model\"):\n",
         "    # Working locally on laptop and desktop, sometimes no gpu available. Device is gpu if gpu is available, cpu otherwise\n",
         "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "    print(device)\n",
@@ -366,7 +369,7 @@
       },
       "outputs": [],
       "source": [
-        "def test(loader, model, model_name):\n",
+        "def test(loader, model, model_name=\"current_model\"):\n",
         "    model.load_state_dict(torch.load(model_name + '.pth'))\n",
         "    num_correct = 0\n",
         "    num_samples = 0\n",
@@ -619,7 +622,7 @@
         "\n",
         "# Train model on training data and save parameters as cifar_model.pth\n",
         "# Early stopping at around epoch 7, roughly 73.8% accuracy\n",
-        "train(cifar_train_data_loader, cifar_test_data_loader, cifarNet1, optimizer, model_name=\"cifar_model\", epochs=100)"
+        "train(cifar_train_data_loader, cifar_test_data_loader, cifarNet1, optimizer, epochs=100)"
       ]
     },
     {
@@ -637,7 +640,7 @@
       ],
       "source": [
         "# Load model and test it on the testing set\n",
-        "test(cifar_test_data_loader, cifarNet1, \"cifar_model\")"
+        "test(cifar_test_data_loader, cifarNet1)"
       ]
     },
     {
@@ -772,7 +775,7 @@
         "\n",
         "# Train model on training data and save parameters as mnist_model.pth\n",
         "# Early stopping at around epoch 5, roughly 97.8% accuracy\n",
-        "train(mnist_train_data_loader, mnist_test_data_loader, mnistNet1, optimizer, model_name = \"mnist_model\", epochs= 100)\n"
+        "train(mnist_train_data_loader, mnist_test_data_loader, mnistNet1, optimizer, epochs= 100)\n"
       ]
     },
     {
@@ -790,7 +793,7 @@
       ],
       "source": [
         "# Load model and test it on the testing set\n",
-        "test(mnist_test_data_loader, mnistNet1, \"mnist_model\")"
+        "test(mnist_test_data_loader, mnistNet1)"
       ]
     }
   ],
