added skeleton for rest of notebook

--- a/final_project/final_project_cycle_gan.ipynb
+++ b/final_project/final_project_cycle_gan.ipynb
@@ -56,6 +56,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hyperparameters for the Loaders\n",
+    "BATCH_SIZE = 1\n",
+    "NUM_WORKERS = 2\n",
+    "\n",
     "# Resize each image to be 128 x 128 and transform it into a pytorch tensor\n",
     "transformations = T.Compose([\n",
     "    T.Resize((128,128)),\n",
@@ -73,30 +77,30 @@
     "\n",
     "# Creating loaders for the training, testing, and validation datasets for both real faces and anime faces\n",
     "realFacesTrainLoader = torch.utils.data.DataLoader(realFacesTrain,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)\n",
+    "                                          num_workers=NUM_WORKERS)\n",
     "realFacesTestLoader = torch.utils.data.DataLoader(realFacesTest,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)\n",
+    "                                          num_workers=NUM_WORKERS)\n",
     "realFacesValLoader = torch.utils.data.DataLoader(realFacesVal,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)\n",
+    "                                          num_workers=NUM_WORKERS)\n",
     "\n",
     "animeFacesTrainLoader = torch.utils.data.DataLoader(animeFacesTrain,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)\n",
+    "                                          num_workers=NUM_WORKERS)\n",
     "animeFacesTestLoader = torch.utils.data.DataLoader(animeFacesTest,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)\n",
+    "                                          num_workers=NUM_WORKERS)\n",
     "animeFacesValLoader = torch.utils.data.DataLoader(animeFacesVal,\n",
-    "                                          batch_size=10,\n",
+    "                                          BATCH_SIZE,\n",
     "                                          shuffle=True,\n",
-    "                                          num_workers=2)"
+    "                                          num_workers=NUM_WORKERS)"
    ]
   },
   {
